# wre-commit

./: .gitignore  README.md  setup.cfg
wre_commit/: __main__.py  main.py
