[metadata]
name = wre_commit
version = 1.0.6
description = A wrapper for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JakeFromTheDark/wre-commit
author = Kamil Jakubovic
author_email = kamil.jakubovic@gmail.com
license = GNU GPL v3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.0

[options.entry_points]
console_scripts =
    wre-commit = wre_commit.main:main

[options.package_data]
wre_commit.resources =
    *.tar.gz
    empty_template_*

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
